[tool.poetry]
name = "cerebro-api"
version = "0.1.0"
description = ""
authors = ["Jose B <jose.zdy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
opencv-python = "^4.2.0"
numpy = "^1.18.1"
mrcnn = "^0.2"
scikit-image = "^0.16.2"
keras = "2.2.4"
tensorflow = "1.13.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
